# LostAndFound

./: .bandit  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  Owner.schema.json  README.md  bandit.yaml  cdk.json  makefile  pyproject.toml  pytest.ini  requirements-dev.txt  testlog.txt
.github/: copilot-instructions.md
api/: openapi.yaml
devtools/: dump_folder_structure.py
infra/: app.py  requirements.txt
models/: generate_models.sh
runtime/: __init__.py
runtime/shared/: .lambdaignore  identifier_model.py  logging_utils.py  modeldump.py  owner_model.py  owner_store.py  pyproject.toml  response_model.py  session_model.py  session_store.py
runtime/shared/api/: minimal_registry.py  request_model.py  response_model.py
runtime/shared/api/owner/: api_owner_model.py
runtime/shared/com/: decorator.py  identifier_model.py  shared_helper.py
runtime/shared/db/owner/: owner_model.py  owner_store.py
runtime/shared/db/session/: session_model.py  session_store.py
runtime/shared/owner/: owner_model.py  owner_strore.py
runtime/shared/src/shared/: __init__.py  minimal_registry.py  response_model.py
runtime/shared/src/shared/api/: response_model.py
runtime/shared/src/shared/api/owner/: api_owner_model.py
runtime/shared/src/shared/com/: decorator.py  identifier_model.py  logging_utils.py  shared_helper.py
runtime/shared/src/shared/db/owner/: owner_model.py  owner_store.py
runtime/shared/src/shared/db/session/: session_model.py  session_store.py
runtime/shared/src/shared/owner/: api_owner_model.py
wiki/: ADR-Index.md  Architecture.md  Flows.md  Home.md  (+4 more)
(+60 files in other folders)
