[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared layer for Lost & Found QR Platform Lambda functions"
authors = ["Roland.Biendl@gmail.com"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
packages = [{ include = "shared", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.2.1"
requests = "^2.31.0"

